# minimalNote

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  setup.sh
app/: MyNotebook.cxx  addNote.cxx  cleanNotebook.cxx  createNotebook.cxx  showNotebook.cxx
inc/: Note.hxx  Notebook.hxx
src/: Note.cxx  Notebook.cxx
